# Personal

./: Cargo.toml
capsule/src/: lib.rs  ofile.rs  utils.rs
capsule/tests/: ofile_test.rs
diary-cli/: Cargo.toml
diary-cli/capsule/: Cargo.toml
diary-cli/capsule/src/: error.rs  lib.rs  ofile.rs  prelude.rs  utils.rs
diary-cli/capsule/src/utils/: ofile.rs
diary-cli/capsule/src/utils/ofile/: error.rs  ofile_mode.rs
diary-cli/capsule/tests/: isol.rs  ofile_test.rs
diary-cli/src/: _old_cli.rs  build_config.rs  cli.rs  config.rs  console.rs  env.rs  error.rs  io.rs  lib.rs  lock.rs  main.rs  version.rs
diary-cli/src/console/: error.rs
diary-cli/src/version/: error.rs
diary-cli/tests/: env_test.rs  error_test.rs  isol.rs  lock_test.rs  macro_test.rs  version_test.rs
gres/: Cargo.toml
gres/src/: cli.rs  compress.rs  lib.rs  logger.rs  main.rs
