[package]
name = "diary-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.164", features = ["derive"]}
zip = "0.6.6"
clap = { version = "4.3.2", features = ["derive"] }
bincode = "1.3.3"
rand = "0.8.5"